add a progress bar

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
        </div>
        <br><br>
 
+         <div class="progress">
+          <div id="progressbar" class="determinate blue" style="width: 0%"></div>
+        </div>
+
      </div>
    </div>
 
