add a progress bar

--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
          <!--  <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light blue lighten-2">Get Started</a> -->
        </div>
        <br><br>
-
-         <div class="progress">
-          <div id="progressbar" class="determinate blue" style="width: 0%"></div>
-        </div>
-
      </div>
    </div>
+
+   <div class="progress">
+          <div id="progressbar" class="determinate blue" style="width:0 %"></div>
+        </div>
+
+   <a class="btn-floating btn-large waves-effect waves-light blue"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
+   <a onclick="progressBar()" id="right" class="btn-floating btn-large waves-effect waves-light blue"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
 
    <form id="frm1">
     <div class="card center z-depth-5">
@@ -504,10 +506,10 @@
   </div>
 </footer>
 
+
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="turfu.js"></script>
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"
-integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-crossorigin="anonymous"></script>
+<script type="text/javascript" src="step.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 
