--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
           <div id="progressbar" class="determinate blue" style="width:0 %"></div>
         </div>
 
-   <a class="btn-floating btn-large waves-effect waves-light blue"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
+   <a onclick="switchQh ()" class="btn-floating btn-large waves-effect waves-light blue"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
    <a onclick="progressBar()" id="right" class="btn-floating btn-large waves-effect waves-light blue"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
 
    <form id="frm1">
-    <div class="card center z-depth-5">
+    <div id="0" class="toggled Cvcard center z-depth-5">
       <h3 class="title blue-text">Votre prénom préféré : </h3>
       <div class="row">
         <div class="col s4">
@@ -77,7 +77,7 @@
     <!-- question deux -->
 
 
-    <div class="card center z-depth-5">
+    <div id="1" class="toggleCv card center z-depth-5">
       <h3 class="title blue-text">Le nom de famille d'un acteur de cinéma :</h3>
       <div class="row">
         <div class="col s4">
@@ -101,7 +101,7 @@
     <!-- Question 3 -->
 
 
-    <div class="card center z-depth-5">
+    <div id="2" class="toggleCv card center z-depth-5">
       <h3 class="title blue-text">Le nom d'un personnage célèbre : </h3>
       <div class="row">
         <div class="col s4">
@@ -125,7 +125,7 @@
     <!-- Questions 4 -->
 
 
-    <div class="card center z-depth-5">
+    <div id="3" class="toggleCv card center z-depth-5">
       <h3 class="title blue-text">Le nom de la ville la plus belle au monde :</h3>
       <div class="row">
         <div class="col s4">
@@ -149,277 +149,7 @@
     <!-- Questions 5 -->
 
 
-    <div class="card center z-depth-5">
-      <h3 class="title blue-text">Votre chiffre ou nombre préféré : </h3>
-      <div class="row">
-        <div class="col s4">
-          <!-- Promo Content 1 goes here -->
-        </div>
-        <div class="col s8">
-          <!-- Promo Content 2 goes here -->
-          <div class="row">
-            <div class="input-field col s6 center">
-              <input name="input4" id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">votre réponse</label>
-            </div>
-          </div>
-          <div class="col s4">
-            <!-- Promo Content 3 goes here -->
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Question 6 -->
-
-
-    <div class="card center z-depth-5">
-      <h3 class="title blue-text">Le métier que vous rêviez de faire quand vous étiez petit (par exemple, pompier, astronaute, coiffeur, chanteur, footballeur, etc.) : </h3>
-      <div class="row">
-        <div class="col s4">
-          <!-- Promo Content 1 goes here -->
-        </div>
-        <div class="col s8">
-          <!-- Promo Content 2 goes here -->
-          <div class="row">
-            <div class="input-field col s6 center">
-              <input name="input5" id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">votre réponse</label>
-            </div>
-          </div>
-          <div class="col s4">
-            <!-- Promo Content 3 goes here -->
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Questions 7 -->
-
-    <div class="card center z-depth-5">
-      <h3 class="title blue-text">Un bon diplôme (par exemple, doctorat en mathématiques, licence de droit, maîtrise de sciences économiques, etc.) :</h3>
-      <div class="row">
-        <div class="col s4">
-          <!-- Promo Content 1 goes here -->
-        </div>
-        <div class="col s8">
-          <!-- Promo Content 2 goes here -->
-          <div class="row">
-            <div class="input-field col s6 center">
-              <input name="input6" id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">votre réponse</label>
-            </div>
-          </div>
-          <div class="col s4">
-            <!-- Promo Content 3 goes here -->
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Questions 8 -->
-
-    <div class="card center z-depth-5">
-      <h3 class="title blue-text">Un métier très bien payé - le mot doit commencer par une consonne (par exemple joueur de tennis, paléontologue, professeur, etc.)</h3>
-      <div class="row">
-        <div class="col s4">
-          <!-- Promo Content 1 goes here -->
-        </div>
-        <div class="col s8">
-          <!-- Promo Content 2 goes here -->
-          <div class="row">
-            <div class="input-field col s6 center">
-              <input name="input7" id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">votre réponse</label>
-            </div>
-          </div>
-          <div class="col s4">
-            <!-- Promo Content 3 goes here -->
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Questions 9 -->
-
-    <div class="card center z-depth-5">
-      <h3 class="title blue-text">Une langue très rare : </h3>
-      <div class="row">
-        <div class="col s4">
-          <!-- Promo Content 1 goes here -->
-        </div>
-        <div class="col s8">
-          <!-- Promo Content 2 goes here -->
-          <div class="row">
-            <div class="input-field col s6 center">
-              <input name="input8" id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">votre réponse</label>
-            </div>
-          </div>
-          <div class="col s4">
-            <!-- Promo Content 3 goes here -->
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Questions 10 -->
-
-    <div class="card center z-depth-5">
-      <h3 class="title blue-text">L'une de vos passions : </h3>
-      <div class="row">
-        <div class="col s4">
-          <!-- Promo Content 1 goes here -->
-        </div>
-        <div class="col s8">
-          <!-- Promo Content 2 goes here -->
-          <div class="row">
-            <div class="input-field col s6 center">
-              <input id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">votre réponse</label>
-            </div>
-          </div>
-          <div class="col s4">
-            <!-- Promo Content 3 goes here -->
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Questions 11 -->
-
-    <div class="card center z-depth-5">
-      <h3 class="title blue-text">Un nom d'aliment au pluriel (par exemple haricots verts, tomates, etc.): </h3>
-      <div class="row">
-        <div class="col s4">
-          <!-- Promo Content 1 goes here -->
-        </div>
-        <div class="col s8">
-          <!-- Promo Content 2 goes here -->
-          <div class="row">
-            <div class="input-field col s6 center">
-              <input id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">votre réponse</label>
-            </div>
-          </div>
-          <div class="col s4">
-            <!-- Promo Content 3 goes here -->
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="card center z-depth-5">
-      <h3 class="title blue-text">Un nom d'aliment masculin singulier (par exemple chocolat, pain, sucre, etc.) </h3>
-      <div class="row">
-        <div class="col s4">
-          <!-- Promo Content 1 goes here -->
-        </div>
-        <div class="col s8">
-          <!-- Promo Content 2 goes here -->
-          <div class="row">
-            <div class="input-field col s6 center">
-              <input id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">votre réponse</label>
-            </div>
-          </div>
-          <div class="col s4">
-            <!-- Promo Content 3 goes here -->
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Questions 12 -->
-
-    <div class="card center z-depth-5">
-      <h3 class="title blue-text">Donner une somme d'argent très élevée (Ecrivez le nombre en toutes lettres. Par exemple : un million d'euros)</h3>
-      <div class="row">
-        <div class="col s4">
-          <!-- Promo Content 1 goes here -->
-        </div>
-        <div class="col s8">
-          <!-- Promo Content 2 goes here -->
-          <div class="row">
-            <div class="input-field col s6 center">
-              <input id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">votre réponse</label>
-            </div>
-          </div>
-          <div class="col s4">
-            <!-- Promo Content 3 goes here -->
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Questions 13 -->
-
-    <div class="card center z-depth-5">
-      <h3 class="title blue-text">Votre émission de télévision préférée (vous pouvez l'écrire dans votre langue) :</h3>
-      <div class="row">
-        <div class="col s4">
-          <!-- Promo Content 1 goes here -->
-        </div>
-        <div class="col s8">
-          <!-- Promo Content 2 goes here -->
-          <div class="row">
-            <div class="input-field col s6 center">
-              <input id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">votre réponse</label>
-            </div>
-          </div>
-          <div class="col s4">
-            <!-- Promo Content 3 goes here -->
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Questions 14 -->
-
-    <div class="card center z-depth-5">
-      <h3 class="title blue-text">Votre écrivain préféré : </h3>
-      <div class="row">
-        <div class="col s4">
-          <!-- Promo Content 1 goes here -->
-        </div>
-        <div class="col s8">
-          <!-- Promo Content 2 goes here -->
-          <div class="row">
-            <div class="input-field col s6 center">
-              <input id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">votre réponse</label>
-            </div>
-          </div>
-          <div class="col s4">
-            <!-- Promo Content 3 goes here -->
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="card center z-depth-5">
-      <h3 class="title blue-text">La date d'aujourd'hui (exemple : le 5 février 2017)</h3>
-      <div class="row">
-        <div class="col s4">
-          <!-- Promo Content 1 goes here -->
-        </div>
-        <div class="col s8">
-          <!-- Promo Content 2 goes here -->
-          <div class="row">
-            <div class="input-field col s6 center">
-              <input id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">votre réponse</label>
-            </div>
-          </div>
-          <div class="col s4">
-            <!-- Promo Content 3 goes here -->
-          </div>
-        </div>
-      </div>
-    </div>
+   
 
 <!--     
     <div class="card center z-depth-5">
