--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
     <form>
      <div class="center">
-      <a href="#modal1" onclick="toggleCv()" class="hideButon waves-effect waves-light btn"><i class="fa fa-thumbs-up" aria-hidden="true"></i>Êtes-vous prêt à lire votre CV ?</a>
+      <a href="#modal1" onclick="toggleCv()" class="hideButon waves-effect waves-light btn toggleCv"><i class="fa fa-thumbs-up" aria-hidden="true"></i>Êtes-vous prêt à lire votre CV ?</a>
       <div id="modal1" class="modal">
         <div class="modal-content">
           <div class="container">
