finaly zorks champagne

--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
           <div id="progressbar" class="determinate blue" style="width:0 %"></div>
         </div>
 
-   <a onclick="switchQh ()" class="btn-floating btn-large waves-effect waves-light blue"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
-   <a onclick="progressBar()" id="right" class="btn-floating btn-large waves-effect waves-light blue"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+   <!-- <a onclick="switchQh ()" class="btn-floating btn-large waves-effect waves-light blue"><i class="fa fa-arrow-left" aria-hidden="true"></i></a> -->
+   <!-- <a onclick="progressBar()" id="right" class="btn-floating btn-large waves-effect waves-light blue"><i class="fa fa-arrow-right" aria-hidden="true"></i></a> -->
 
    <form id="frm1">
+
     <div id="0" class="toggled Cvcard center z-depth-5">
+
       <h3 class="title blue-text">Votre prénom préféré : </h3>
       <div class="row">
         <div class="col s4">
@@ -69,6 +71,7 @@
           </div>
           <div class="col s4">
             <!-- Promo Content 3 goes here -->
+
           </div>
         </div>
       </div>
@@ -442,6 +445,7 @@
         </div>
       </div>
     </div>
+    <a onclick="progressBar()" id="right" class="btn-floating btn-large waves-effect waves-light blue action"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
 
 
    
