sociql tool not working

--- a/index.html
+++ b/index.html
@@ -481,13 +481,12 @@
             <p class="border" id="head"></p>
             <p class="border bigtitle" id="title"></p>
             <p class="border" id="sub"></p>
-                  <h1 id="tagline" class="blue-text">Sinon...</h1>
-                  <p>Ce CV est bizarre ! Mais comment faire un vrai CV ? Consultez ce site :<a target="blank" href="http://cvenligne.onisep.fr/index.php/"> Onisep cv en ligne</a></p>
-                  <!-- <a href="http://cvenligne.onisep.fr/index.php/"><img width="50%" class="center" src="cv.png"></a> -->
+                  
+                  <p>Ce CV est bizarre ! Mais comment faire un vrai CV ? Consultez ce site !<a target="blank" href="http://cvenligne.onisep.fr/index.php/"> Onisep cv en ligne</a></p>
                 </div>
         </div>
         <div class="modal-footer">
-          <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Merci</a>
+          <a href="mailto:theophile.vast@institutfrancais.es" class=" modal-action modal-close waves-effect waves-green btn-flat">Merci</a>
         </div>
       </div>
     </div>
@@ -546,8 +545,14 @@
     $('.modal').modal();
   });
 </script>
-<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-57b5b1ba4a06581c"></script> 
-<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-57b5b1ba4a06581c"></script> 
+<!-- Go to www.addthis.com/dashboard to customize your tools --> 
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-57b5b1ba4a06581c">
+  
+</script> 
+<!-- Go to www.addthis.com/dashboard to customize your tools --> 
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-57b5b1ba4a06581c">
+  
+</script> 
 
 
 
