--- a/index.html
+++ b/index.html
@@ -550,6 +550,7 @@
   
 </script>
 <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58bd33f4d017c274"></script>
+<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58bd33f4d017c274"></script> 
 
 
 
