add inverse progress bar

--- a/index.html
+++ b/index.html
@@ -469,6 +469,7 @@
       </div>
     </div>
     <a onclick="progressBar()" id="right" class="btn-floating btn-large waves-effect waves-light blue action"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+    <a onclick="progressBar2()" id="right" class="btn-floating btn-large waves-effect waves-light blue action"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
 
     
 
