change add this pararms and change meta og

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <meta property="og:title" content="CV original" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="cours.ifmadrid.com/prof/generateur" />
+  <meta property="og:image" content="cours.ifmadrid.com/prof/generateur/illu-facebook.PNG" />
   <title>CV original</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/materialize.css">
@@ -14,7 +18,7 @@
 <body>
 
   <nav class="white lighten-1 lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="http://www.institutfrancais.es/madrid/" class="brand-logo"><img class="logow" src="http://www.institutfrancais.es/madrid/adjuntos/logotipo_20160719.jpg"></a>
+    <div class="nav-wrapper container"><a id="logo-container" href="http://www.institutfrancais.es/madrid/cursos-online/" class="brand-logo"><img class="logow" src="http://www.institutfrancais.es/madrid/adjuntos/logotipo_20160719.jpg"></a>
       <ul class="black-text right hide-on-med-and-down">
         <li><a class="black-text" href="http://www.institutfrancais.es/madrid/cursos-online/">Découvrir notre offre de cours en ligne</a></li>
       </ul>
@@ -469,7 +473,7 @@
       </div>
     </div>
     <a onclick="progressBar()" id="right" class="btn-floating btn-large waves-effect waves-light blue action"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-    <a onclick="progressBar2()" id="right" class="btn-floating btn-large waves-effect waves-light blue action"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
+    <a onclick="progressBar2()" id="left" class="btn-floating btn-large waves-effect waves-light blue action"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
 
     
 
@@ -515,14 +519,14 @@
 </div>
 <footer class="page-footer blue lighten-1 tagline">
   <div class="container">
-    <div class="row">
+  <!--   <div class="row">
       <div class="col l6 s12">
         <h5 class="white-text">CV original</h5>
         <p class="grey-text text-lighten-4">Made with <i class="fa fa-heartbeat" aria-hidden="true"></i> in Madrid</p>
       </div>
 
     </div>
-  </div>
+  </div> -->
   <div class="footer-copyright">
     <div class="container">
       © 2017 Code by Théophile Vast in his <i class="fa fa-rocket" aria-hidden="true"></i> - Conception : Alix Creuzé Janvier 2004 - Mise à jour Janvier 2013
@@ -535,7 +539,7 @@
 
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="turfu.js"></script>
+<script type="text/javascript" src="generator.js"></script>
 <script type="text/javascript" src="step.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
