add arrow and message when click

--- a/index.html
+++ b/index.html
@@ -473,9 +473,9 @@
       </div>
     </div>
     <div class="container center">
-    <span id="recul">hi</span>
-    	<a onclick="progressBar2()" id="left" class="left action btn-floating btn-large waves-effect waves-light blue action"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
-    	<a onclick="progressBar()" id="right" class="right btn-floating btn-large waves-effect waves-light blue action"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+    <span id="recul">Bienvenu, cliquez sur la flèche pour continuer</span>
+    	<a id="left" class="left action btn-floating btn-large waves-effect waves-light blue action"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
+    	<a id="right" class="right btn-floating btn-large waves-effect waves-light blue action"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
      
     </div>
      
