hide arrozs when finished

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         </div>
       </div>
     </div>
-    <div class="container center">
+    <div id="control" class="container center">
     <span id="recul">Bienvenu, cliquez sur la flèche pour continuer</span>
     	<a id="left" class="left action btn-floating btn-large waves-effect waves-light blue action"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
     	<a id="right" class="right btn-floating btn-large waves-effect waves-light blue action"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
