--- a/index.html
+++ b/index.html
@@ -561,6 +561,7 @@
 </script>
 
 <!-- addthis -->
+<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-57b5b1ba4a06581c"></script> 
 
 
 
