clean console log!

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <nav class="white lighten-1 lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="http://www.institutfrancais.es/madrid/cursos-online/" class="brand-logo"><img class="logow" src="http://www.institutfrancais.es/madrid/adjuntos/logotipo_20160719.jpg"></a>
       <ul class="black-text right hide-on-med-and-down">
-        <li><a class="black-text" href="http://www.institutfrancais.es/madrid/cursos-online/">Découvrir notre offre de cours en ligne</a></li>
+        <li><a class="black-text" target="blank" href="http://www.institutfrancais.es/madrid/cursos-online/">Découvrir notre offre de cours en ligne</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav black-text">
@@ -498,7 +498,7 @@
                 </div>
         </div>
         <div class="modal-footer">
-          <a href="mailto:theophile.vast@institutfrancais.es" class=" modal-action modal-close waves-effect waves-green btn-flat">Merci</a>
+          <a class=" modal-action modal-close waves-effect waves-green btn-flat">Merci</a>
         </div>
       </div>
     </div>
