start change cv style

--- a/index.html
+++ b/index.html
@@ -487,10 +487,11 @@
     <form>
      <div class="center">
       
-      <div id="modal1" class="modal">
-        <div class="modal-content">
+    <!--   <div id="modal1" class="modal"> -->
+        <div class="modal-content z-depth-5">
           <div class="container">
-            <p class="border" id="head"></p>
+          <img width="10%" class="left" src="http://www.doyoubuzz.com/var/users/_/2013/5/20/12/498796/avatar/429482/avatar_cp_big.jpg?t=1490785118?1490785120784">
+            <p class="borderBottom" id="head"></p>
             <p class="border bigtitle" id="title"></p>
             <p class="border" id="sub"></p>
                   
@@ -500,7 +501,7 @@
         <div class="modal-footer">
           <a href="mailto:theophile.vast@institutfrancais.es" class=" modal-action modal-close waves-effect waves-green btn-flat">Merci</a>
         </div>
-      </div>
+      <!-- </div> -->
     </div>
   </div>
 </div>
