--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@ $(document).ready(function(){
 </script>
 
 <!-- addthis -->
-<!-- Go to www.addthis.com/dashboard to customize your tools --> <!-- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-57b5b1ba4a06581c"></script>  -->
+<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-57b5b1ba4a06581c"></script> 
 
 
 
