--- a/index.html
+++ b/index.html
@@ -597,9 +597,9 @@
 </script>
 
 <!-- addthis -->
-<!-- Go to www.addthis.com/dashboard to customize your tools --> 
+
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58cfe48a2de20889"></script> 
-<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58cfe48a2de20889"></script> 
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58cfe48a2de20889"></script> 
 
 
 
